<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.userauth.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="@dimen/gl_top_percent"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="@dimen/gl_start_percent"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="@dimen/gl_bottom_percent"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="@dimen/gl_left_percent"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/tv_default"
            app:layout_constraintTop_toTopOf="@id/gl_top"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            android:text="@string/text_app_name"
            android:textSize="@dimen/h1_text_size" />

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_email"
            style="@style/et_default"
            android:layout_marginTop="@dimen/large_100"
            app:layout_constraintTop_toTopOf="@id/gl_top"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintBottom_toBottomOf="@+id/gl_bottom"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:text="@string/test_email" />

        <EditText
            android:id="@+id/et_password"
            style="@style/et_default"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="@string/test_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/btn_default"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            android:text="@string/text_login" />

        <TextView
            android:id="@+id/tv_goto_register"
            style="@style/tv_default"
            android:layout_marginBottom="@dimen/normal_100"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            android:text="@string/text_goto_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>