<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="player"
            type="com.realmadridinfo.data.models.Player" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_item_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/text_image"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:imageUrl="@{player.imageUrl}" />

        <View
            android:id="@+id/v_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/iv_item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/v_line"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_text_name"
                style="@style/tv_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_name"
                android:textSize="@dimen/h2_text_size"/>

            <TextView
                android:id="@+id/tv_name"
                style="@style/tv_default"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/h2_text_size"
                app:name="@{player.name}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_proposedMarketValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/ll_name"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_text_proposedMarketValue"
                style="@style/tv_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_proposedMarketValue"
                android:textSize="@dimen/h2_text_size"/>

            <TextView
                android:id="@+id/tv_proposedMarketValue"
                style="@style/tv_default"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/h2_text_size"
                app:proposedMarketValue="@{player.proposedMarketValue}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/ll_proposedMarketValue"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_text_height"
                style="@style/tv_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_height"
                android:textSize="@dimen/h2_text_size"/>

            <TextView
                android:id="@+id/tv_height"
                style="@style/tv_default"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/h2_text_size"
                app:height="@{player.height}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_jerseyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/ll_height"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_text_jerseyNumber"
                style="@style/tv_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_jerseyNumber"
                android:textSize="@dimen/h2_text_size"/>

            <TextView
                android:id="@+id/tv_jerseyNumber"
                style="@style/tv_default"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/h2_text_size"
                app:jerseyNumber="@{player.jerseyNumber}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/ll_jerseyNumber"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_text_position"
                style="@style/tv_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_position"
                android:textSize="@dimen/h2_text_size"/>

            <TextView
                android:id="@+id/tv_position"
                style="@style/tv_default"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/h2_text_size"
                app:position="@{player.position}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_preferredFoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintTop_toBottomOf="@id/ll_position"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_text_preferredFoot"
                style="@style/tv_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_preferredFoot"
                android:textSize="@dimen/h2_text_size"/>

            <TextView
                android:id="@+id/tv_preferredFoot"
                style="@style/tv_default"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/h2_text_size"
                app:preferredFoot="@{player.preferredFoot}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>